src/test/ui/issues/issue-4935.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-4935.rs:5:13
   |
LL | fn main() { foo(5, 6) }
   |             ^^^^-^^^^
   |                 |
   |                 argument of type usize unexpected
   |
note: function defined here
  --> $DIR/issue-4935.rs:3:4
   |
LL | fn foo(a: usize) {}
   |    ^^^ --------
help: remove the extra argument
   |
LL | fn main() { foo(5) }
   |             ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
